--- a/Vacanta8.html
+++ b/Vacanta8.html
@@ -273,60 +273,60 @@
                 <div class="itinerary-card">
                     <h3>Ziua 4</h3>
                     <p>• Sosire la <b>Koh Samui</b> </p>
-                    <p>• Relax at the popular beach </p>
-                    <p>• Enjoy the vibrant nightlife </p>
+                    <p>• Relaxează-te pe plaja populară </p>
+                    <p>• Bucură-te de viața de noapte vibrantă </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 5</h3>
-                    <p>• Take a day trip to <b>Unseen</b> island</p>
-                    <p>• Enjoy activities and hiking to a viewpoint </p>
+                    <p>• Fă o excursie de o zi pe <b>insula Unseen</b> </p>
+                    <p>• Bucură-te de activități și drumeții până la un punct de observație </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 6</h3>
-                    <p>• Visit the <b>Big Buddha Temple</b> </p>
-                    <p>• Visit Waterfalls and swim in the natural pools </p>
-                    <p>• Discover and feed <b>elephants</b> </p>
+                    <p>• Vizitează Templul Marelui Buddha </p>
+                    <p>• Vizitează cascadele și înoată în piscinele naturale </p>
+                    <p>• Descoperă și hrănește <b>elefanți</b> </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 7</h3>
-                    <p>• Safari tour of the island to discover hidden spots </p>  
-                    <p>• Relax and enjoy water sports </p>  
-                    <p>• Try a Thai cooking class </p>
-                    <p>• Explore <b>Fisherman’s Village</b> </p>               
+                    <p>• Tur safari al insulei pentru a descoperi locuri ascunse </p>  
+                    <p>• Relaxează-te și bucură-te de sporturi acvatice </p>  
+                    <p>• Încearcă o lecție de gătit thailandeză </p>
+                    <p>• Explorează <b>Fisherman’s Village</b> </p>               
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 8</h3>
-                    <p>• Unwind with a massage </p>
-                    <p>• Explore famous natural rock formations </p>
-                    <p>• Take a leisurely walk through night market </p>
+                    <p>• Relaxază-te cu un masaj </p>
+                    <p>• Explorează faimoasele formațiuni naturale de rocă </p>
+                    <p>• Fă o plimbare liniștită prin piața de noapte </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 9</h3>
                     <p>• Sosire la <b>Koh Phangan</b> </p>
-                    <p>• Spend time at the beach </p>
+                    <p>• Petrece timp pe plajă </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 10</h3>
-                    <p>• Discover the waterfall </p>
-                    <p>• Go on a snorkeling trip to nearby islands </p>
-                    <p>• Enjoy the clear waters and coral reefs </p>
+                    <p>• Descoperă cascada </p>
+                    <p>• Mergi într-o excursie de snorkeling către insulele din apropiere </p>
+                    <p>• Bucură-te de apele clare și recifele de corali </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 11</h3>
-                    <p>• Experience <b>scuba diving</b> </p>
-                    <p>• Enjoy a sunset cocktail or dinner </p>
+                    <p>• Experimentează <b>scuba diving</b> </p>
+                    <p>• Bucură-te de un cocktail sau cină la apus </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 12</h3>
-                    <p>• Free time to relax on the beach </p>
-                    <p>• Explore the island by scooter </p>
-                    <p>• Have fun at the <b>Full Moon Party</b> </p>
+                    <p>• Timp liber pentru a te relaxa pe plajă </p>
+                    <p>• Explorează insula cu scuterul </p>
+                    <p>• Distracție la <b>Full Moon Party</b> </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 13</h3>
-                    <p>• A one day trip to an island with white fine sand and crystal-clear water </p>
-                    <p>• Snorkeling around the island </p>
-                    <P>• Take a short hike to the viewpoint </P>
+                    <p>• Excursie de o zi pe o insulă cu nisip alb fin și apă cristalină </p>
+                    <p>• Snorkeling în jurul insulei </p>
+                    <P>• Fă o drumeție scurtă până la punctul de observație </P>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 14</h3>
