--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="i9E3rGG1Jnb9Mmeu6q28o98gZPtTw3IUdvIQ0Wf1GHM" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trasia Agency - Explore Thailand</title>
