--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             position: relative;
             padding: 20px;
             opacity: 0;
-            transition: opacity 1s ease-in;
+            /*transition: opacity 1s ease-in;*/
         }
         .hero h1 {
             font-size: 3.5em;
