--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -196,7 +196,9 @@
 
     <div class="hero">
         <h1>Descopera Thailanda!</h1>
-        <a class="cta-button" href="Booking.html">Cere Oferta</a>
+        /*<a class="cta-button" href="Booking.html">Cere Oferta</a>*/
+        <a class="cta-button" href="Booking.html?destination=Pattaya">Cere Oferta</a>
+
     </div>
 
     <main>
