--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -197,7 +197,8 @@
     <div class="hero">
         <h1>Descopera Thailanda!</h1>
         /*<a class="cta-button" href="Booking.html">Cere Oferta</a>*/
-        <a class="cta-button" href="Booking.html?destination=Pattaya">Cere Oferta</a>
+        <a class="cta-button" href="Booking.html?destination=Bangkok%20-%20Phuket%20-%20Phi%20Phi%20-%20Pattaya">Cere Oferta</a>
+
 
     </div>
 
