--- a/Booking.html
+++ b/Booking.html
@@ -225,7 +225,7 @@
         <option value="">Alege o destinație</option>
         <option value="Luna de miere">Luna de miere</option>
         <option value="Personalizata">Personalizata</option>
-        <option value="Bangkok - Phuket - Phi Phi - Pattaya ">Bangkok - Phuket - Phi Phi - Pattaya)</option>
+        <option value="Bangkok - Phuket - Phi Phi - Pattaya ">Bangkok - Phuket - Phi Phi - Pattaya</option>
         <option value="Bangkok - Chiang Mai - Phuket - Phi Phi">Bangkok - Chiang Mai - Phuket - Phi Phi</option>
         <option value="Bangkok - Krabi - Phuket - Phi Phi">Bangkok - Krabi - Phuket - Phi Phi</option>
         <option value="Khao Sok - Khao Lak - Phuket - Phi Phi">Khao Sok - Khao Lak - Phuket - Phi Phi</option>
@@ -233,6 +233,8 @@
         <option value="Bangkok - Ayutthaya - Chiang Mai - Krabi - Phuket">Bangkok - Ayutthaya - Chiang Mai - Krabi - Phuket</option>
         <option value="Bangkok - Ayutthaya - Kanchanaburi - Khao Yai - Phuket - Phi Phi">Bangkok - Ayutthaya - Kanchanaburi - Khao Yai - Phuket - Phi Phi</option>
     </select>
+        
+
 
     <label for="guests">Număr de oaspeți</label>
     <input type="number" id="guests" name="guests" required>
