--- a/Vacanta2.html
+++ b/Vacanta2.html
@@ -196,7 +196,7 @@
 
     <div class="hero">
         <h1>Descopera Thailanda!</h1>
-        <a class="cta-button" href="offers.html">Oferte</a>
+          <a class="cta-button" href="Booking.html?destination=Bangkok%20-%20Chiang%20Mai%20-%20Phuket%20-%20Phi%20Phi">Cere Oferta</a>
     </div>
 
     <main>
