--- a/Vacanta3.html
+++ b/Vacanta3.html
@@ -195,7 +195,8 @@
 
     <div class="hero">
         <h1>Descopera Thailanda!</h1>
-        <a class="cta-button" href="offers.html">Oferte</a>
+        <a class="cta-button" href="Booking.html?destination=Bangkok%20-%20Krabi%20-%20Phuket%20-%20Phi%20Phi">Cere Oferta</a>
+
     </div>
 
     <main>
