--- a/Booking.html
+++ b/Booking.html
@@ -232,6 +232,7 @@
         <option value="Bangkok - Chiang Rai - Chiang Mai - Krabi - Phuket">Bangkok - Chiang Rai - Chiang Mai - Krabi - Phuket</option>
         <option value="Bangkok - Ayutthaya - Chiang Mai - Krabi - Phuket">Bangkok - Ayutthaya - Chiang Mai - Krabi - Phuket</option>
         <option value="Bangkok - Ayutthaya - Kanchanaburi - Khao Yai - Phuket - Phi Phi">Bangkok - Ayutthaya - Kanchanaburi - Khao Yai - Phuket - Phi Phi</option>
+        <option value="Bangkok - Koh Samui - Koh Pha Ngan">Bangkok - Koh Samui - Koh Pha Ngan</option>
     </select>
         
 
