--- a/honeymoon2.html
+++ b/honeymoon2.html
@@ -95,7 +95,7 @@
             text-align: center;
             padding: 20px;
             opacity: 0;
-            transition: opacity 1s ease-in;
+
         }
         .hero h1 {
             font-size: 2.5em;
@@ -195,7 +195,8 @@
 
     <div class="hero">
         <h1>Descopera Thailanda!</h1>
-        <a class="cta-button" href="offers.html">Oferte</a>
+        <a class="cta-button" href="Booking.html?destination=Luna%20de%20miere">Cere Oferta</a>
+
     </div>
 
     <main>
