--- a/Booking.html
+++ b/Booking.html
@@ -178,6 +178,15 @@
         }
     </style>
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2PY470GX95"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2PY470GX95');
+</script>
 
 <body>
     <header>
@@ -260,7 +269,6 @@
                 <img src="https://www.svgrepo.com/show/419930/instagram-socials-social-media-icon.svg" alt="Instagram">
             </a>
         </div>
-    </footer>
     <script>
         function toggleMenu() {
             const menuOverlay = document.getElementById('menuOverlay');
