--- a/ChiangRai.html
+++ b/ChiangRai.html
@@ -279,7 +279,7 @@
         <img id="modalImage" src="" alt="Modal Image">
     </div>
 
-    <footer>
+     <footer>
         <p>© 2024 Trasia Agency. All rights reserved.</p>
         <div class="social-media">
             <a href="https://www.facebook.com/profile.php?id=61566412341547" target="_blank" class="social-icon">
@@ -292,6 +292,7 @@
                 <img src="https://www.svgrepo.com/show/419930/instagram-socials-social-media-icon.svg" alt="Instagram">
             </a>
         </div>
+    </footer>
     <script>
         
         let slideIndex = 0;
