--- a/Booking.html
+++ b/Booking.html
@@ -256,7 +256,7 @@
 
     </div>
 
-    <footer>
+     <footer>
         <p>© 2024 Trasia Agency. All rights reserved.</p>
         <div class="social-media">
             <a href="https://www.facebook.com/profile.php?id=61566412341547" target="_blank" class="social-icon">
@@ -269,6 +269,7 @@
                 <img src="https://www.svgrepo.com/show/419930/instagram-socials-social-media-icon.svg" alt="Instagram">
             </a>
         </div>
+    </footer>
     <script>
         function toggleMenu() {
             const menuOverlay = document.getElementById('menuOverlay');
