--- a/Customer-details.html
+++ b/Customer-details.html
@@ -88,6 +88,15 @@
         }
     </style>
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2PY470GX95"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2PY470GX95');
+</script>
 <body>
     <header>
         <div class="logo">Trasia Agency</div>
@@ -125,9 +134,19 @@
         </form>
     </div>
 
-    <footer>
-        <p>Contact us: Trasiaagency@gmail.com | +40727300463</p>
-        <p>&copy; 2024 Travel Agency. All rights reserved.</p>
+     <footer>
+        <p>© 2024 Trasia Agency. All rights reserved.</p>
+        <div class="social-media">
+            <a href="https://www.facebook.com/profile.php?id=61566412341547" target="_blank" class="social-icon">
+                <img src="https://www.svgrepo.com/show/419926/facebook-fb-social-icon.svg" alt="Facebook">
+            </a>
+            <a href="https://wa.me/+40771410487" target="_blank" class="social-icon">
+                <img src="https://www.svgrepo.com/show/419933/whats-app-whatsapp-whatsapp-icon.svg" alt="WhatsApp">
+            </a>
+            <a href="https://www.instagram.com/trasia.agency/" target="_blank" class="social-icon">
+                <img src="https://www.svgrepo.com/show/419930/instagram-socials-social-media-icon.svg" alt="Instagram">
+            </a>
+        </div>
     </footer>
 </body>
 </html>
