--- a/Kohsamui.html
+++ b/Kohsamui.html
@@ -185,6 +185,15 @@
     </style>
     <link href="stylesheet" rel="stylesheet">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2PY470GX95"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2PY470GX95');
+</script>
 <body onload="fadeIn()">
     <header>
         <div class="logo">Trasia Agency</div>
@@ -264,17 +273,17 @@
         <img id="modalImage" src="" alt="Modal Image">
     </div>
 
-    <footer>
+     <footer>
         <p>© 2024 Trasia Agency. All rights reserved.</p>
         <div class="social-media">
             <a href="https://www.facebook.com/profile.php?id=61566412341547" target="_blank" class="social-icon">
-                <img src="https://cdn.icon-icons.com/icons2/1/PNG/256/social_facebook_fb_35.png" alt="Facebook">
+                <img src="https://www.svgrepo.com/show/419926/facebook-fb-social-icon.svg" alt="Facebook">
             </a>
             <a href="https://wa.me/+40771410487" target="_blank" class="social-icon">
-                <img src="https://cdn.icon-icons.com/icons2/622/PNG/512/whatsapp-logo_icon-icons.com_57054.png" alt="WhatsApp">
+                <img src="https://www.svgrepo.com/show/419933/whats-app-whatsapp-whatsapp-icon.svg" alt="WhatsApp">
             </a>
             <a href="https://www.instagram.com/trasia.agency/" target="_blank" class="social-icon">
-                <img src="https://cdn.icon-icons.com/icons2/2066/PNG/512/instagram_icon_125245.png" alt="Instagram">
+                <img src="https://www.svgrepo.com/show/419930/instagram-socials-social-media-icon.svg" alt="Instagram">
             </a>
         </div>
     </footer>
