--- a/Booking.html
+++ b/Booking.html
@@ -10,6 +10,7 @@
     
       gtag('config', 'G-2PY470GX95');
     </script>
+    <link rel="icon" href="https://www.trasiaagency.com/TrasiaLOGO.png" type="image/png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trasia Agency - Booking</title>
