--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
       gtag('config', 'G-2PY470GX95');
     </script>
-    <link rel="icon" href="https://www.trasiaagency.com/TrasiaLOGO.png" type="image/png">
+    <link rel="icon" href="https://www.trasiaagency.com/LOGO500.png" type="image/png">
     <meta name="google-site-verification" content="i9E3rGG1Jnb9Mmeu6q28o98gZPtTw3IUdvIQ0Wf1GHM" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
