--- a/offers.html
+++ b/offers.html
@@ -101,7 +101,7 @@
         }
         .intro-text {
             font-size: 1.2em;
-            color: #d9b08c;
+            color: #000000;
             margin-bottom: 20px;
             font-style: italic;
             line-height: 1.5;
