--- a/Services.html
+++ b/Services.html
@@ -191,41 +191,41 @@
 
     <main>
         <section class="section">
-            <h2>Ce oferim?</h2>
+            <h2>De ce sa alegi Trasia?</h2>
             <div class="services">
                 <div class="service">
-                    <h3>Itinerarii personalizate</h3>
-                    <p>Ne ocupam sa aveti o vacanta de neuitat, si foarte bine pusa la punct. Aducem la realitate orice dorinta aveti.</p>
+                    <h3>Noi ne ocupam de TOT!</h3>
+                    <p>Zboruri, transport, cazare, restaurante, activitati, asigurari, conexiune la internet - TOTUL organizat ca tu sa te poti relaxa</p>
                 </div>
                 <div class="service">
-                    <h3>Hoteluri</h3>
-                    <p>Gasim hoteluri pe placul dvs, care sa raspunda la toate cerintele pe care le aveti si ne ocupam de rezervarea acestora.</p>
+                    <h3>Preturi Avantajoase la Cazari si Transporturi</h3>
+                    <p>Colaboram cu hoteluri si furnizori locali, asadar in cele mai multe cazuri preturile noastre sunt mai cele mai avantajoase</p>
                 </div>
                 <div class="service">
-                    <h3>Activitati</h3>
-                    <p>Ne asiguram sa aveti parte de cele mai interesante si de neuitat activitati.</p>
+                    <h3>Transparenta 100%</h3>
+                    <p>Fara taxe ascunse, fara comisioane surpriza. Vezi exact ceea ce platesti si primesti mereu cea mai buna oferta posibila</p>
                 </div>
                 <div class="service">
-                    <h3>Suport 24/7</h3>
-                    <p>Va asiguram suportul in cazul oricarei probleme sau curiozitati intalnite.</p>
+                    <h3>Echipa de experti thailandezi & romani</h3>
+                    <p>Cunoastem Thailanda ca in palma si oferim cele mai autentice experiente </p>
                 </div>
                 <div class="service">
-                    <h3>Transporturi</h3>
-                    <p>Rezervam transporturile atat intre hoteluri si aeroporturi cat si intre hotel si activitati.</p>
+                    <h3>Asistenta online 24/7</h3>
+                    <p>Ai suport non-stop, indiferent de fusul orar sau problemele intampinate </p>
                 </div>
                 <div class="service">
-                    <h3>Internet</h3>
-                    <p>La sosirea dvs in tara, va vom asigura cartele cu internet.</p>
+                    <h3>Itinerariu personalizat</h3>
+                    <p>Vacanta ta, exact cum ti-o doresti. Noi ne ocupam de toate detaliile adaptate preferintelor tale </p>
                 </div>
                 <div class="service">
-                    <h3>Voie buna</h3>
-                    <p>Ne asiguram sa aveti parte de cea mai frumoasa vacanta, si cele mai interesante experiente.</p>
+                    <h3>Totul la vedere</h3>
+                    <p>Iti oferim detaliat toate costurile inainte de rezervare, astfel incat sa stii exact ce primesti </p>
                 </div>
             </div>
         </section>
 
         <section class="section">
-            <h2>De ce sa ne alegeti?</h2>
+            <h2>Hai sa calatoresti cu noi</h2>
             <p>La Trasia Agency, fiecare calatorie este special create pentru a se potrivi dorintelor si preferintelor dumneavostra. Fie ca visati la o escapada in insulele tropicale, aventuri in jungla sau tururi culturale, suntem aici pentru a face experienta dvs. unica si memorabila. </p>
             <a href="customization.html" class="cta-button">Personalizeaza-ti vacanta!</a>
         </section>
@@ -240,13 +240,13 @@
         <p>© 2024 Trasia Agency. All rights reserved.</p>
         <div class="social-media">
             <a href="https://www.facebook.com/profile.php?id=61566412341547" target="_blank" class="social-icon">
-                <img src="https://cdn.icon-icons.com/icons2/1/PNG/256/social_facebook_fb_35.png" alt="Facebook">
+                <img src="https://www.svgrepo.com/show/419926/facebook-fb-social-icon.svg" alt="Facebook">
             </a>
             <a href="https://wa.me/+40771410487" target="_blank" class="social-icon">
-                <img src="https://cdn.icon-icons.com/icons2/622/PNG/512/whatsapp-logo_icon-icons.com_57054.png" alt="WhatsApp">
+                <img src="https://www.svgrepo.com/show/419933/whats-app-whatsapp-whatsapp-icon.svg" alt="WhatsApp">
             </a>
             <a href="https://www.instagram.com/trasia.agency/" target="_blank" class="social-icon">
-                <img src="https://cdn.icon-icons.com/icons2/2066/PNG/512/instagram_icon_125245.png" alt="Instagram">
+                <img src="https://www.svgrepo.com/show/419930/instagram-socials-social-media-icon.svg" alt="Instagram">
             </a>
         </div>
     </footer>
