--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
             border-radius: 10px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
+        
         .destinations, .offers-container {
             display: flex;
             flex-wrap: wrap;
@@ -459,6 +460,68 @@
             <button class="next" onclick="showTestimonial(1)">❯</button>
         </div>
     </div>
+    <section id="form" class="section">
+            <h2>Cere o oferta personalizata</h2>
+            <form id="bookingForm" action="https://script.google.com/macros/s/AKfycbwfMtZhGcIJWUCvjlmQBnwxh4hKu4oxAJdqSsvw4zgKJ6VlrOM4XaJs_vGzZWLVdAqB/exec" method="POST">
+                <input type="email" id="email" name="email" placeholder="Email" required>
+                <div class="phone-container">
+                    <select id="countryCode" name="countryCode" required>
+                        <option value="+40">+40 (Romania)</option>
+                        <option value="+1">+1 (USA)</option>
+                        <option value="+44">+44 (UK)</option>
+                        <option value="+49">+49 (Germany)</option>
+                        <option value="+33">+33 (France)</option>
+                        <option value="+39">+39 (Italy)</option>
+                        <option value="+34">+34 (Spain)</option>
+                        <option value="+61">+61 (Australia)</option>
+                        <option value="+81">+81 (Japan)</option>
+                        <option value="+86">+86 (China)</option>
+                        <option value="+91">+91 (India)</option>
+                        <option value="+27">+27 (South Africa)</option>
+                        <option value="+55">+55 (Brazil)</option>
+                        <option value="+61">+61 (New Zealand)</option>
+                        <option value="+41">+41 (Switzerland)</option>
+                        <option value="+351">+351 (Portugal)</option>
+                        <option value="+46">+46 (Sweden)</option>
+                        <option value="+358">+358 (Finland)</option>
+                        <option value="+45">+45 (Denmark)</option>
+                        <option value="+47">+47 (Norway)</option>
+                        <option value="+353">+353 (Ireland)</option>
+                        <option value="+36">+36 (Hungary)</option>
+                        <option value="+420">+420 (Czech Republic)</option>
+                        <option value="+421">+421 (Slovakia)</option>
+                        <option value="+385">+385 (Croatia)</option>
+                        <option value="+381">+381 (Serbia)</option>
+                        <option value="+32">+32 (Belgium)</option>
+                        <option value="+31">+31 (Netherlands)</option>
+                        <option value="+372">+372 (Estonia)</option>
+                        <option value="+370">+370 (Lithuania)</option>
+                        <option value="+371">+371 (Latvia)</option>
+                        <option value="+30">+30 (Greece)</option>
+                        <option value="+994">+994 (Azerbaijan)</option>
+                        <option value="+7">+7 (Russia)</option>
+                        <option value="+996">+996 (Kyrgyzstan)</option>
+                        <option value="+998">+998 (Uzbekistan)</option>
+                        <option value="+63">+63 (Philippines)</option>
+                        <option value="+84">+84 (Vietnam)</option>
+                        <option value="+972">+972 (Israel)</option>
+                    </select>
+                    <input type="tel" id="phone" name="phone" placeholder="Phone Number" required>
+                </div>
+                <div class="currency-container">
+                    <input type="number" id="budget" name="budget" placeholder="Enter your budget" required>
+                    <select id="currency" name="currency" required>
+                        <option value="EUR">EUR</option>
+                        <option value="USD">USD</option>
+                        <option value="RON">RON</option>
+                    </select>
+                </div>
+                <input type="number" id="guests" name="guests" placeholder="Numar de oaspeti" required>
+
+                <textarea id="description" name="description" placeholder="Describe what you want from the holiday" required></textarea>
+                <button type="submit" class="cta-button">Trimite</button>
+            </form>
+        </section>
 
     <footer>
         <p>© 2024 Trasia Agency. All rights reserved.</p>
