--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       ttq.page();
     }(window, document, 'ttq');
     </script>
-    <!-- TikTok Pixel Code End -->**
+    <!-- TikTok Pixel Code End -->
     <link rel="icon" href="https://www.trasiaagency.com/LOGO500.png" type="image/png">
     <meta name="google-site-verification" content="i9E3rGG1Jnb9Mmeu6q28o98gZPtTw3IUdvIQ0Wf1GHM" />
     <meta charset="UTF-8">
