--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <meta name="google-site-verification" content="i9E3rGG1Jnb9Mmeu6q28o98gZPtTw3IUdvIQ0Wf1GHM" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trasia Agency - Explore Thailand</title>
+    <title>Vacanta Thailanda 2025 - Vezi oferte sejururi - Trasia Agency</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -337,7 +337,7 @@
     </div>
     
     <div class="hero">
-        <h1>Exploreaza Thailanda cu noi! </h1>
+        <h1>Vacanta in Thailanda</h1>
         <a href="Booking.html" class="cta-button">Cere Oferta!</a>
     </div>
      <div class="section">
