--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
     <!-- TikTok Pixel Code End -->
     <link rel="icon" href="https://www.trasiaagency.com/LOGO500.png" type="image/png">
     <meta name="google-site-verification" content="i9E3rGG1Jnb9Mmeu6q28o98gZPtTw3IUdvIQ0Wf1GHM" />
+     <meta property="og:image" content="https://www.trasiaagency.com/LOGO500.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Vacanta Thailanda 2025 - Vezi oferte sejururi - Trasia Agency</title>
     <style>
         body {
