--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- TikTok Pixel Code End -->
     <link rel="icon" href="https://www.trasiaagency.com/LOGO500.png" type="image/png">
     <meta name="google-site-verification" content="i9E3rGG1Jnb9Mmeu6q28o98gZPtTw3IUdvIQ0Wf1GHM" />
-     <meta property="og:image" content="https://www.trasiaagency.com/LOGO500.png" />
+    <meta property="og:image" content="https://www.trasiaagency.com/SITEIMAGE.JPG" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
